chore(platform): freeze validated full integration candidate
Temporary source-preservation branch only; split into scoped PRs before main.